unpackaged/main/default/objects/Employee_Record__c/Employee_Record__c.object-meta.xml
<CustomObject>
    <label>Employee Record</label>
    <nameField>
        <label>Employee Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>