unpackaged/main/default/objects/Employee_Record__c/fields/Age_of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Employee__c</fullName>
    <formula>FLOOR((TODAY() -  Date_of_birth__c )/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Employee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>