unpackaged/main/default/objects/Employee_Record__c/fields/Annual_Car_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Car_Allowance__c</fullName>
    <label>Annual Car Allowance</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>