unpackaged/main/default/objects/Employee_Record__c/fields/AUTOEmployer_NI_Contribution__c.field-meta.xml
<CustomField>
    <fullName>AUTOEmployer_NI_Contribution__c</fullName>
    <formula>(Contractual_Annual_Salary__c +  Annual_Car_Allowance__c +  Variable_Bonus__c +  Variable_Commission__c +  Health_Cover__c ) *  Employer_NI_Contribution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer NI Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>