unpackaged/main/default/objects/Employee_Record__c/fields/AutoManager__c.field-meta.xml
<CustomField>
    <fullName>AutoManager__c</fullName>
    <formula>IF ( (ISPICKVAL(Primary_Org__c , "Majenta")) ,

Owner:User.Manager.FirstName &amp; " " &amp; Owner:User.Manager.LastName, 

"Adam Pilkington")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>