unpackaged/main/default/objects/Employee_Record__c/fields/AutoMonthly_Salary__c.field-meta.xml
<CustomField>
    <fullName>AutoMonthly_Salary__c</fullName>
    <formula>Contractual_Annual_Salary__c /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>