unpackaged/main/default/objects/Employee_Record__c/fields/AutoTotal_Cost__c.field-meta.xml
<CustomField>
    <fullName>AutoTotal_Cost__c</fullName>
    <formula>Contractual_Annual_Salary__c + Annual_Car_Allowance__c + Variable_Bonus__c +  Variable_Commission__c + Health_Cover__c +  AUTOEmployer_NI_Contribution__c +  Employer_Pension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>