unpackaged/main/default/objects/Employee_Record__c/fields/Base_Location__c.field-meta.xml
<CustomField>
    <fullName>Base_Location__c</fullName>
    <label>Base Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Working</fullName>
            </value>
            <value>
                <fullName>Office Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>