unpackaged/main/default/objects/Employee_Record__c/fields/Business_Landline__c.field-meta.xml
<CustomField>
    <fullName>Business_Landline__c</fullName>
    <label>Business Landline</label>
    <type>Phone</type>
</CustomField>