unpackaged/main/default/objects/Employee_Record__c/fields/Business_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Business_Mobile__c</fullName>
    <label>Business Mobile</label>
    <type>Phone</type>
</CustomField>