unpackaged/main/default/objects/Employee_Record__c/fields/Confirm_you_have_checked_your_details__c.field-meta.xml
<CustomField>
    <fullName>Confirm_you_have_checked_your_details__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this checkbox to confirm you have checked all your details</inlineHelpText>
    <label>Confirm you have checked your details</label>
    <type>Checkbox</type>
</CustomField>