unpackaged/main/default/objects/Employee_Record__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <label>Personal Mobile</label>
    <type>Phone</type>
</CustomField>