unpackaged/main/default/objects/Employee_Record__c/fields/Contractual_Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Annual_Salary__c</fullName>
    <label>Annual Salary</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>