unpackaged/main/default/objects/Employee_Record__c/fields/Date_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Reviewed__c</fullName>
    <inlineHelpText>Last Date Reviewed</inlineHelpText>
    <label>Date Reviewed</label>
    <type>Date</type>
</CustomField>