unpackaged/main/default/objects/Employee_Record__c/fields/Days_Carried_Over__c.field-meta.xml
<CustomField>
    <fullName>Days_Carried_Over__c</fullName>
    <label>Days Carried Over</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>