unpackaged/main/default/objects/Employee_Record__c/fields/Driving_Licence_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Driving_Licence_Expiry_Date__c</fullName>
    <label>Driving Licence Expiry Date</label>
    <type>Date</type>
</CustomField>