unpackaged/main/default/objects/Employee_Record__c/fields/Driving_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Driving_Licence_Number__c</fullName>
    <label>Driving Licence Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>