unpackaged/main/default/objects/Employee_Record__c/fields/Email_address__c.field-meta.xml
<CustomField>
    <fullName>Email_address__c</fullName>
    <inlineHelpText>Personal email address</inlineHelpText>
    <label>Email Address (Personal)</label>
    <type>Email</type>
</CustomField>