unpackaged/main/default/objects/Employee_Record__c/fields/Email_Address_Company__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_Company__c</fullName>
    <inlineHelpText>Company email address</inlineHelpText>
    <label>Email Address (Company)</label>
    <type>Email</type>
</CustomField>