unpackaged/main/default/objects/Employee_Record__c/fields/Emergency_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_1__c</fullName>
    <label>Emergency Contact (1)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>