unpackaged/main/default/objects/Employee_Record__c/fields/Emergency_Contact_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Number_1__c</fullName>
    <label>Emergency Contact Number (1)</label>
    <type>Phone</type>
</CustomField>