unpackaged/main/default/objects/Employee_Record__c/fields/Emergency_Contact_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Number_2__c</fullName>
    <label>Emergency Contact Number  (2)</label>
    <type>Phone</type>
</CustomField>