unpackaged/main/default/objects/Employee_Record__c/fields/Emergency_Contact_Relationship_1__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship_1__c</fullName>
    <label>Emergency Contact Relationship (1)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>