unpackaged/main/default/objects/Employee_Record__c/fields/Employee_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Employee_Contribution__c</fullName>
    <label>Employee Pension Contribution (%)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>