unpackaged/main/default/objects/Employee_Record__c/fields/Employer_Contributiion__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contributiion__c</fullName>
    <label>Employer Pension Contribution (%)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>