unpackaged/main/default/objects/Employee_Record__c/fields/Employer_NI_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Employer_NI_Contribution__c</fullName>
    <label>Employer NI Contribution %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>