unpackaged/main/default/objects/Employee_Record__c/fields/Employer_Pension__c.field-meta.xml
<CustomField>
    <fullName>Employer_Pension__c</fullName>
    <formula>Employer_Contributiion__c * Contractual_Annual_Salary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer Pension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>