unpackaged/main/default/objects/Employee_Record__c/fields/Enerjyhub_Synced_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Enerjyhub_Synced_Record_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The synced record ID from enerjyhub org to majenta org</description>
    <externalId>true</externalId>
    <label>Enerjyhub Synced Record ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>