unpackaged/main/default/objects/Employee_Record__c/fields/Health_Cover__c.field-meta.xml
<CustomField>
    <fullName>Health_Cover__c</fullName>
    <label>Health Cover</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>