unpackaged/main/default/objects/Employee_Record__c/fields/Holiday_Booked_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Booked_RollUp__c</fullName>
    <label>Holiday Booked</label>
    <summarizedField>Holiday_Request__c.Number_of_Days__c</summarizedField>
    <summaryFilterItems>
        <field>Holiday_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Holiday_Request__c.IsThis_Year__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Holiday_Request__c.Employee_Record__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>