unpackaged/main/default/objects/Employee_Record__c/fields/Holiday_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Entitlement__c</fullName>
    <label>Holiday Entitlement</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>