unpackaged/main/default/objects/Employee_Record__c/fields/Holiday_For_ChristmasAuto__c.field-meta.xml
<CustomField>
    <fullName>Holiday_For_ChristmasAuto__c</fullName>
    <formula>3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holiday For Christmas</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>