unpackaged/main/default/objects/Employee_Record__c/fields/Holiday_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Remaining__c</fullName>
    <formula>(Holiday_Entitlement__c +  Days_Carried_Over__c )- (   HolidayForXmas__c   + Holiday_Booked_RollUp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holiday Remaining</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>