unpackaged/main/default/objects/Employee_Record__c/fields/HolidayForXmas__c.field-meta.xml
<CustomField>
    <fullName>HolidayForXmas__c</fullName>
    <label>Holiday for Christmas</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>