unpackaged/main/default/objects/Employee_Record__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <label>Hourly Rate</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>