unpackaged/main/default/objects/Employee_Record__c/fields/Insurance_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Renewal_Date__c</fullName>
    <inlineHelpText>Enter insurance renewal date of up-to-date insurance document</inlineHelpText>
    <label>Insurance Renewal Date</label>
    <type>Date</type>
</CustomField>