unpackaged/main/default/objects/Employee_Record__c/fields/IsBusiness_Cover__c.field-meta.xml
<CustomField>
    <fullName>IsBusiness_Cover__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you are a business driver, tick to confirm you have business cover on your insurance</inlineHelpText>
    <label>Business Cover</label>
    <type>Checkbox</type>
</CustomField>