unpackaged/main/default/objects/Employee_Record__c/fields/IsBusiness_Driver__c.field-meta.xml
<CustomField>
    <fullName>IsBusiness_Driver__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if you use your own vehicle for Majenta business other that to commute to one place or work?</inlineHelpText>
    <label>Business Driver</label>
    <type>Checkbox</type>
</CustomField>