unpackaged/main/default/objects/Employee_Record__c/fields/IsCompleteCompanyHeadshots__c.field-meta.xml
<CustomField>
    <fullName>IsCompleteCompanyHeadshots__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Headshots Completed</label>
    <type>Checkbox</type>
</CustomField>