unpackaged/main/default/objects/Employee_Record__c/fields/IsCompleteGeneralInduction__c.field-meta.xml
<CustomField>
    <fullName>IsCompleteGeneralInduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Induction Completed</label>
    <type>Checkbox</type>
</CustomField>