unpackaged/main/default/objects/Employee_Record__c/fields/IsCompleteHealth_Safety__c.field-meta.xml
<CustomField>
    <fullName>IsCompleteHealth_Safety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health &amp; Safety Completed</label>
    <type>Checkbox</type>
</CustomField>