unpackaged/main/default/objects/Employee_Record__c/fields/IsCompleteHRForms__c.field-meta.xml
<CustomField>
    <fullName>IsCompleteHRForms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HR Forms Completed</label>
    <type>Checkbox</type>
</CustomField>