unpackaged/main/default/objects/Employee_Record__c/fields/IsCompleteMeetTeams__c.field-meta.xml
<CustomField>
    <fullName>IsCompleteMeetTeams__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meet The Teams Complete</label>
    <type>Checkbox</type>
</CustomField>