unpackaged/main/default/objects/Employee_Record__c/fields/IsCompleteMXTraining__c.field-meta.xml
<CustomField>
    <fullName>IsCompleteMXTraining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MX Training Completed</label>
    <type>Checkbox</type>
</CustomField>