unpackaged/main/default/objects/Employee_Record__c/fields/IsCompleteRoleTraining__c.field-meta.xml
<CustomField>
    <fullName>IsCompleteRoleTraining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Role Tools Training Completed</label>
    <type>Checkbox</type>
</CustomField>