unpackaged/main/default/objects/Employee_Record__c/fields/IsCompleteSalesforceTraining__c.field-meta.xml
<CustomField>
    <fullName>IsCompleteSalesforceTraining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Training Completed</label>
    <type>Checkbox</type>
</CustomField>