unpackaged/main/default/objects/Employee_Record__c/fields/IsConfirmedEAP__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedEAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EAP Process Confirmed</label>
    <type>Checkbox</type>
</CustomField>