unpackaged/main/default/objects/Employee_Record__c/fields/IsConfirmedEmployeeRecord__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedEmployeeRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Record Process Confirmed</label>
    <type>Checkbox</type>
</CustomField>