unpackaged/main/default/objects/Employee_Record__c/fields/IsConfirmedExpensesProcess__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedExpensesProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expenses Process Confirmed</label>
    <type>Checkbox</type>
</CustomField>