unpackaged/main/default/objects/Employee_Record__c/fields/IsConfirmedHolidayBooking__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedHolidayBooking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holiday Booking Process Confirmed</label>
    <type>Checkbox</type>
</CustomField>