unpackaged/main/default/objects/Employee_Record__c/fields/IsConfirmedHoursOfWork__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedHoursOfWork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hours Of Work Process Confirmed</label>
    <type>Checkbox</type>
</CustomField>