unpackaged/main/default/objects/Employee_Record__c/fields/IsConfirmedIT__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedIT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Support Process Confirmed</label>
    <type>Checkbox</type>
</CustomField>