unpackaged/main/default/objects/Employee_Record__c/fields/IsConfirmedPensionProcess__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedPensionProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pension Process Confirmed</label>
    <type>Checkbox</type>
</CustomField>