unpackaged/main/default/objects/Employee_Record__c/fields/IsConfirmedPersonalDetails__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedPersonalDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Details Confirmed</label>
    <type>Checkbox</type>
</CustomField>