unpackaged/main/default/objects/Employee_Record__c/fields/IsConfirmedSalaryProcess__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedSalaryProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salary Process Confirmed</label>
    <type>Checkbox</type>
</CustomField>