unpackaged/main/default/objects/Employee_Record__c/fields/IsConfirmedSicknessReporting__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedSicknessReporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sickness Reporting Process Confirmed</label>
    <type>Checkbox</type>
</CustomField>