unpackaged/main/default/objects/Employee_Record__c/fields/IsConfirmedStaffHandbook__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedStaffHandbook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConfirmedStaffHandbook</label>
    <type>Checkbox</type>
</CustomField>