unpackaged/main/default/objects/Employee_Record__c/fields/IsConvictions_Updated__c.field-meta.xml
<CustomField>
    <fullName>IsConvictions_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick to confirm if all (if any) convictions are up-to-date and uploaded (tick even if there are none)</inlineHelpText>
    <label>Convictions Updated</label>
    <type>Checkbox</type>
</CustomField>