unpackaged/main/default/objects/Employee_Record__c/fields/IsDriver__c.field-meta.xml
<CustomField>
    <fullName>IsDriver__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsDriver</label>
    <type>Checkbox</type>
</CustomField>