unpackaged/main/default/objects/Employee_Record__c/fields/IsInsurance_Updated__c.field-meta.xml
<CustomField>
    <fullName>IsInsurance_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if you have uploaded your up-to-date insurance document</inlineHelpText>
    <label>Insurance Updated</label>
    <type>Checkbox</type>
</CustomField>