unpackaged/main/default/objects/Employee_Record__c/fields/IsMobileDetailsConfirmed__c.field-meta.xml
<CustomField>
    <fullName>IsMobileDetailsConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMobileDetailsConfirmed</label>
    <type>Checkbox</type>
</CustomField>