unpackaged/main/default/objects/Employee_Record__c/fields/IsMobileUser__c.field-meta.xml
<CustomField>
    <fullName>IsMobileUser__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsMobilePhoneUser</label>
    <type>Checkbox</type>
</CustomField>