unpackaged/main/default/objects/Employee_Record__c/fields/IsMOT_Updated__c.field-meta.xml
<CustomField>
    <fullName>IsMOT_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if you have uploaded your up-to-date MOT document</inlineHelpText>
    <label>MOT Updated</label>
    <type>Checkbox</type>
</CustomField>