unpackaged/main/default/objects/Employee_Record__c/fields/IsNon_Business_Driver__c.field-meta.xml
<CustomField>
    <fullName>IsNon_Business_Driver__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if you DO NOT use your own vehicle for Majenta business</inlineHelpText>
    <label>Non-Business Driver</label>
    <type>Checkbox</type>
</CustomField>