unpackaged/main/default/objects/Employee_Record__c/fields/Leaving_Date__c.field-meta.xml
<CustomField>
    <fullName>Leaving_Date__c</fullName>
    <inlineHelpText>Last Date of Employment at Majenta</inlineHelpText>
    <label>Leaving Date</label>
    <type>Date</type>
</CustomField>