unpackaged/main/default/objects/Employee_Record__c/fields/Monthly_Pension__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Pension__c</fullName>
    <formula>Employer_Pension__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Pension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>