unpackaged/main/default/objects/Employee_Record__c/fields/MOT_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>MOT_Renewal_Date__c</fullName>
    <inlineHelpText>Enter MOT renewal date of up-to-date MOT document</inlineHelpText>
    <label>MOT Renewal Date</label>
    <type>Date</type>
</CustomField>