unpackaged/main/default/objects/Employee_Record__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <inlineHelpText>Next planned review date, if it is planned for September but not a specific date, enter 1st September</inlineHelpText>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>