unpackaged/main/default/objects/Employee_Record__c/fields/Notes_Review__c.field-meta.xml
<CustomField>
    <fullName>Notes_Review__c</fullName>
    <inlineHelpText>Enter notes from the latest review</inlineHelpText>
    <label>Notes (Review)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>