unpackaged/main/default/objects/Employee_Record__c/fields/OnboardingStatusAuto__c.field-meta.xml
<CustomField>
    <fullName>OnboardingStatusAuto__c</fullName>
    <formula>IF( 
IsCompleteMeetTeams__c &amp;&amp;  
IsCompleteSalesforceTraining__c &amp;&amp;
IsCompleteMXTraining__c &amp;&amp;
IsCompleteRoleTraining__c &amp;&amp;
IsCompleteCompanyHeadshots__c &amp;&amp;
IsCompleteGeneralInduction__c &amp;&amp;
IsCompleteHealth_Safety__c &amp;&amp;
IsCompleteHRForms__c 
, "Complete","In Progress")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Status</label>
    <type>Text</type>
</CustomField>