unpackaged/main/default/objects/Employee_Record__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>