unpackaged/main/default/objects/Employee_Record__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Payroll 28th</fullName>
            </value>
            <value>
                <fullName>Consultant Invoicing 15th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>