unpackaged/main/default/objects/Employee_Record__c/fields/Pension_Provider__c.field-meta.xml
<CustomField>
    <fullName>Pension_Provider__c</fullName>
    <label>Pension Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Aegon Personal Pension</fullName>
            </value>
            <value>
                <fullName>Smart Pension</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>