unpackaged/main/default/objects/Employee_Record__c/fields/Pension_Status__c.field-meta.xml
<CustomField>
    <fullName>Pension_Status__c</fullName>
    <label>Pension Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opted In</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>