unpackaged/main/default/objects/Employee_Record__c/fields/Place_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Work__c</fullName>
    <label>Place of Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Office</fullName>
            </value>
            <value>
                <fullName>Whitley / Home Office</fullName>
            </value>
            <value>
                <fullName>Customer Site / Home Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>